# portfolio-rust

learning/: Cargo.toml  hello.txt
learning/src/: borrow.rs  box.rs  conditional.rs  enum.rs  file.rs  function.rs  guess.rs  loop.rs  main.rs  option.rs  rc.rs  slice.rs  struct.rs  struct02.rs  variables.rs  vec.rs
mcp/cloud-logging/: Cargo.toml  README.md
mcp/cloud-logging/src/: auth.rs  filters.rs  formatter.rs  main.rs  models.rs  request.rs  server.rs  time.rs
mcp/cloud-logging/src/gcloud/: client.rs  mod.rs  retry.rs
mcp/weather/: Cargo.toml
mcp/weather/src/: main.rs
todolist-sqlite/: Cargo.toml  OPENAPI.md  README.md
todolist-sqlite/data/: todo.db
todolist-sqlite/src/: main.rs
todolist-sqlite/src/api/: mod.rs
todolist-sqlite/src/config/: app_info.rs  mod.rs  open_api.rs  settings.rs
todolist-sqlite/src/controller/: todo_controller.rs
todolist-sqlite/src/model/: mod.rs  todo_item_request.rs  todo_item_response.rs
todolist-sqlite/src/properties/: application.yaml
todolist-sqlite/src/routes/: mod.rs
todolist-sqlite/src/service/: todo_service.rs
todolist-sqlite/src/types/: mod.rs
