[package]
name = "cloud-logging"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP Server
rmcp = { version = "0.12.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1.2.0"

# HTTP Server
axum = "0.8.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "process"] }

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time & Error Handling
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1"
